development of structure and logic